Closed Bug 541108 Opened 16 years ago Closed 16 years ago

nsAccessible::DoCommand shouldn't return value

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: surkov, Assigned: surkov)

References

(Blocks 1 open bug)

Details

(Keywords: access)

Attachments

(1 file)

Attached patch patchSplinter Review
fix while I'm here.
Attachment #422753 - Flags: review?(bolterbugz)
Comment on attachment 422753 [details] [diff] [review] patch r=me, but please rev cid if necessary (DoCommand sig change)
Attachment #422753 - Flags: review?(bolterbugz) → review+
it's not necessary because it's protected method, its' not intended to use outside.
Assignee: nobody → surkov.alexander
Status: NEW → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: