Bug 541108 -  nsAccessible::DoCommand shouldn't return value, r=davidb